08. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
	- displaying nfo pattern on debug info disabled

12. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- menu entries/context menu entries for enable/disable encryption added
	- password confirmation on set/change encryption password added

11. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- display compiled in features in about dialog added
	- support for encrypted catalog added (requires libcrypto++, can be disabled on compile time)
	
03. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- Q_OBJECT macro on ArchiveFile class added
	- cdcat homepage link at info dialog fixed
	- gpl page link at info dialog added
	- crash on cancel of add link dialog fixed (thanks to Alain Aupeix)
	- display path of selected search result entry in status bar added

02. Jan 2012 Christoph Thielecke <crissi99@gmx.de>
	- links now working in regex info dialog (thanks to Alain Aupeix)
	- wikipedia link fixed in regex info dialog

31. Dec 2012 Christoph Thielecke <crissi99@gmx.de>
	- sort catalog by name (descending) added
	- sort catalog by media type (ascending/descending) added
	- export single media to xml added
	- import of cdcat exported xml added (e.g. singe media)

30. Dec 2012 Christoph Thielecke <crissi99@gmx.de>
	- segmentation fault on 'add link to a cdcat catalog' fixed (#3597794)
	- setting progress text fixed
	- changing media type using media type dialog fixed (#3581829)
	- dont stop parsing at unknown media type, change automaticlly to other type

29. Dec 2012 Christoph Thielecke <crissi99@gmx.de>
	- memleaks at scanning filesystem fixed
	- memleaks at exit fixed
	- sorting by ascending or descending results in descending fixed (#3559284)

23. Dec 2012 Christoph Thielecke <crissi99@gmx.de>
	- memleak at scanning filesystem fixed

31. Oct 2012 Christoph Thielecke <crissi99@gmx.de>
	- export fixed (#3576090)
	- default filename at export fixed

03. Aug 2012 Christoph Thielecke <crissi99@gmx.de>